--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
     Name 
 </label>
     <div class="modal-input">
-<input class="form-input" id="user-name" name="user-name"  type="text"/>
-<svg>
+<input href="" class="form-input" id="user-name" name="user-name"  type="text"/>
+<svg class="modal-svg" width="18" height="24">
     <use href="./images/icons.svg#icon-person">
     </use>
 </svg>
