--- a/index.html
+++ b/index.html
@@ -376,7 +376,41 @@
     <use href="./images/icons.svg#icon-person">
     </use>
 </svg>
+    </div>
+</div>
 
+<div class="modal-form-class">
+    <label class="modal-label" for="user-name">
+        Phone
+    </label>
+    <div class="modal-input">
+        <input class="form-input" id="user-name" name="user-name" type="text" />
+        <svg class="modal-svg" width="18" height="24">
+            <use href="./images/icons.svg#icon-person">
+            </use>
+        </svg>
+    </div>
+</div>
+
+<div class="modal-form-class">
+    <label class="modal-label" for="user-name">
+        Email
+    </label>
+    <div class="modal-input">
+        <input class="form-input" id="user-name" name="user-name" type="text" />
+        <svg class="modal-svg" width="18" height="24">
+            <use href="./images/icons.svg#icon-person">
+            </use>
+        </svg>
+    </div>
+
+    <div class="modal-form-comment">
+        <label class="modal-label" for="user-comment">
+            Comment
+        </label>
+        <textarea class="form-textarea" id="user-comment" name="user-comment" placeholder="Text input">
+
+        </textarea>
     </div>
 </div>
             </form>
