--- a/index.html
+++ b/index.html
@@ -403,6 +403,7 @@
             </use>
         </svg>
     </div>
+</div>
 
     <div class="modal-form-comment">
         <label class="modal-label" for="user-comment">
