--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
         Phone
     </label>
     <div class="modal-input">
-<input class="form-input" name="user-name" type="text" />
+<input class="form-input" id="user-name" name="user-name" type="text" />
         <svg class="modal-svg" width="18" height="24">
-            <use href="./images/icons.svg#icon-person">
+            <use href="./images/icons.svg#icon-telephone">
             </use>
         </svg>
     </div>
@@ -397,9 +397,9 @@
         Email
     </label>
     <div class="modal-input">
-<input class="form-input" name="user-name" type="text" />
+<input class="form-input" id="user-name" name="user-name" type="text" />
         <svg class="modal-svg" width="18" height="24">
-            <use href="./images/icons.svg#icon-person">
+            <use href="./images/icons.svg#icon-mail">
             </use>
         </svg>
     </div>
@@ -413,9 +413,7 @@
 
         </textarea>
     </div>
-            </form>
-        </div>
-    </div>
+
 
     <script src="./js/modal.js"></script>
 </body>
