--- a/index.html
+++ b/index.html
@@ -365,7 +365,6 @@
                 <p class="modal-paragraph">
                     Leave your contacts and we will call you back
                 </p>
-            <form>
 <div class="modal-form-class">
 <label class="modal-label" for="user-name">
     Name 
@@ -380,11 +379,11 @@
 </div>
 
 <div class="modal-form-class">
-    <label class="modal-label" for="user-name">
+    <label class="modal-label">
         Phone
     </label>
     <div class="modal-input">
-<input class="form-input" id="user-name" name="user-name" type="text" />
+<input class="form-input" name="user-name" type="text" />
         <svg class="modal-svg" width="18" height="24">
             <use href="./images/icons.svg#icon-telephone">
             </use>
@@ -393,11 +392,11 @@
 </div>
 
 <div class="modal-form-class">
-    <label class="modal-label" for="user-name">
+    <label class="modal-label">
         Email
     </label>
     <div class="modal-input">
-<input class="form-input" id="user-name" name="user-name" type="text" />
+<input class="form-input" name="user-name" type="text" />
         <svg class="modal-svg" width="18" height="24">
             <use href="./images/icons.svg#icon-mail">
             </use>
@@ -413,8 +412,8 @@
 
         </textarea>
     </div>
-
-
+ </div>
+</div>
     <script src="./js/modal.js"></script>
 </body>
 </html>
