--- a/index.html
+++ b/index.html
@@ -379,11 +379,11 @@
 </div>
 
 <div class="modal-form-class">
-    <label class="modal-label">
+    <label class="modal-label" for="user-name">
         Phone
     </label>
     <div class="modal-input">
-<input class="form-input" name="user-name" type="text" />
+<input class="form-input" id="user-name" name="user-name" type="text" />
         <svg class="modal-svg" width="18" height="24">
             <use href="./images/icons.svg#icon-telephone">
             </use>
@@ -392,11 +392,11 @@
 </div>
 
 <div class="modal-form-class">
-    <label class="modal-label">
+    <label class="modal-label" for="user-name">
         Email
     </label>
     <div class="modal-input">
-<input class="form-input" name="user-name" type="text" />
+<input class="form-input" id="user-name" name="user-name" type="text" />
         <svg class="modal-svg" width="18" height="24">
             <use href="./images/icons.svg#icon-mail">
             </use>
@@ -411,8 +411,8 @@
         <textarea class="form-textarea" id="user-comment" name="user-comment" placeholder="Text input">
 
         </textarea>
+        </div>
     </div>
- </div>
 </div>
     <script src="./js/modal.js"></script>
 </body>
