--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
-        <div class="modal-content">
+        < class="modal-content">
             <button class="close-btn" type="button" data-modal-close><svg class="smooth-btn" width="8" height="8">
                     <use href="./images/icons.svg#icon-button"></use>
                 </svg></button>
@@ -366,9 +366,9 @@
                     Leave your contacts and we will call you back
                 </p>
 <div class="modal-form-class">
-<label class="modal-label" for="user-name">
+    <label class="modal-label" for="user-name">
     Name 
-</label>
+    </label>
     <div class="modal-input">
 <input class="form-input" id="user-name" name="user-name"  type="text"/>
 <svg class="modal-svg" width="18" height="24">
@@ -412,7 +412,6 @@
 
         </textarea>
         </div>
-</div>
     <script src="./js/modal.js"></script>
 </body>
 </html>
