--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
         </textarea>
     </div>
 </div>
+            </form>
         </div>
-
 
     <script src="./js/modal.js"></script>
 </body>
