--- a/index.html
+++ b/index.html
@@ -380,11 +380,11 @@
 </div>
 
 <div class="modal-form-class">
-    <label class="modal-label" for="user-name">
+    <label class="modal-label" for="user-name1">
         Phone
     </label>
     <div class="modal-input">
-        <input class="form-input" id="user-name" name="user-name" type="text" />
+        <input class="form-input" id="user-name1" name="user-name1" type="text" />
         <svg class="modal-svg" width="18" height="24">
             <use href="./images/icons.svg#icon-person">
             </use>
@@ -393,11 +393,11 @@
 </div>
 
 <div class="modal-form-class">
-    <label class="modal-label" for="user-name">
+    <label class="modal-label" for="user-name2">
         Email
     </label>
     <div class="modal-input">
-        <input class="form-input" id="user-name" name="user-name" type="text" />
+        <input class="form-input" id="user-name2" name="user-name2" type="text" />
         <svg class="modal-svg" width="18" height="24">
             <use href="./images/icons.svg#icon-person">
             </use>
