--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
     <div class="modal-input">
         <input class="form-input" id="user-name1" name="user-name1" type="text" />
         <svg class="modal-svg" width="18" height="24">
-            <use href="./images/icons.svg#icon-person">
+            <use href="./images/icons.svg#icon-telephone">
             </use>
         </svg>
     </div>
@@ -399,7 +399,7 @@
     <div class="modal-input">
         <input class="form-input" id="user-name2" name="user-name2" type="text" />
         <svg class="modal-svg" width="18" height="24">
-            <use href="./images/icons.svg#icon-person">
+            <use href="./images/icons.svg#icon-mail">
             </use>
         </svg>
     </div>
