--- a/index.html
+++ b/index.html
@@ -413,6 +413,13 @@
 
         </textarea>
     </div>
+
+    <div class="form-checkbox">
+ <input class="checkbox-input visually-hidden" id="user-privacy" type="checkbox" value="true" name="user-privacy"/>
+ <label class="modal-label" for="user-privacy">
+    I accept the terms and conditions of the <span class="checkbox-span">Privacy Policy</span>
+ </label>
+    </div>
     </form>
   </div>
 </div>
