--- a/index.html
+++ b/index.html
@@ -417,7 +417,13 @@
     <div class="form-checkbox">
  <input class="checkbox-input visually-hidden" id="user-privacy" type="checkbox" value="true" name="user-privacy"/>
  <label class="modal-label" for="user-privacy">
-    I accept the terms and conditions of the <span class="checkbox-span">Privacy Policy</span>
+        <span class="checkbox-span">
+            <svg class="checkbox-svg" width="10" height="8">
+                <use href="./images/icons.svg#icon-ok">
+                </use>
+            </svg>
+        </span>
+    I accept the terms and conditions of the <a href="" class="label-link">Privacy Policy</a>
  </label>
     </div>
     </form>
