--- a/index.html
+++ b/index.html
@@ -426,6 +426,10 @@
     I accept the terms and conditions of the <a href="" class="label-link">Privacy Policy</a>
  </label>
     </div>
+
+    <button type="button" class="send-btn">
+    Send
+    </button>
     </form>
   </div>
 </div>
