--- a/index.html
+++ b/index.html
@@ -354,6 +354,22 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="div-subscribe">
+                <p class="paragraph-subs">
+            Subscribe
+                </p>
+                <form class="footer-form">
+            <label class="footer-label" for="">
+                <input class="footer-input" type="email" name="subscribe" placeholder="E-mail"/>
+            </label>
+            <button class="submit-btn" type="submit">
+                Subscribe
+                <svg class="footer-btn-svg" width="24" height="24"><use href="./images/icons.svg#icon-telegram">
+                </use></svg>
+            </button>
+                </form>
+            </div>
         </div>
     </footer>
 
