--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
             Subscribe
                 </p>
                 <form class="footer-form">
-            <label class="footer-label" for="">
-                <input class="footer-input" type="email" name="subscribe" placeholder="E-mail"/>
+            <label class="footer-label">
+                <input class="footer-input" id="email-input" type="email" name="subscribe" placeholder="E-mail"/>
             </label>
             <button class="submit-btn" type="submit">
                 Subscribe
