--- a/index.html
+++ b/index.html
@@ -425,9 +425,7 @@
         <label class="modal-label" for="user-comment">
             Comment
         </label>
-        <textarea class="form-textarea" id="user-comment" name="user-comment" placeholder="Text input">
-
-        </textarea>
+        <textarea class="form-textarea" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
     </div>
 
     <div class="form-checkbox">
